# docs/swagger.json
@@ -1243,6 +1243,12 @@
                 "backdrop_path": {
                     "type": "string"
                 },
+                "genre_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
                 "genres": {
                     "type": "array",
                     "items": {
